# Group3IoTW23

./: LICENSE  README.md  report_project.docx
arduino_scripts/esp_test/: esp_test.ino
arduino_scripts/esp_test/esp32/: esp32.ino
arduino_scripts/esp_test/esp32_v2/esp32_v2/: esp32_v2.ino
esp32/: esp32.ino
thingy52/: CMakeLists.txt  prj.conf
thingy52/src/: leds.c  leds.h  main.c  sensor.c  sensor.h  thingy_bt.c  thingy_bt.h
